--- a/themes/npq-hugo/static/css/style.css
+++ b/themes/npq-hugo/static/css/style.css
@@ -20,8 +20,8 @@ html, body {
     line-height: 1.6;
     height: 100%;
     margin: 0px;
-    background-color:#1A1C1D;
-    color : #D8D6D0;
+    background-color:#ffffff;
+    color : #1A2433;
 }
 
 a {
@@ -34,7 +34,7 @@ a:hover {
 }
 
 aside {
-    background-color:rgb(45, 49, 51);
+    background: linear-gradient(to right,#1a2433 0%,#253449 80%,#253449 100%);
     height: 100%;
     width: 200px;
     z-index: 1;
@@ -58,7 +58,7 @@ aside i[class^="fa"]{
 }
 
 aside header {
-    background-color:#23282E;
+    background: linear-gradient(to right,#1a2433 0%,#253449 80%,#253449 100%);
     text-align: center;
     display: flex;
     align-items: center;
@@ -72,7 +72,6 @@ aside header img{
     min-width: 150px;
     max-width: 300px;
     border-radius: 10px;
-
 }
 
 aside a:hover {
@@ -130,8 +129,9 @@ aside nav a:hover {
     border: 1px solid #3D3D3D;
     border-radius: 3px;
     padding: 10px;
-    background-color:rgb(39, 41, 43);
+    background-color: #FFFFFF;
 }
+
 .list-item+.list-item{
     margin-top: 10px;
 }
@@ -146,7 +146,7 @@ aside nav a:hover {
 }
 
 .meta {
-   color: rgb(156, 151, 143);
+   color: #1A2433;
    font-size: small;
 }
 
@@ -308,7 +308,7 @@ footer{
     padding: 30px;
     margin-top: 40px;
     border-top: 1px solid #3D3D3D;
-    background-color:rgb(30, 34, 39) ;
+    background: linear-gradient(to right,#1a2433 0%,#253449 80%,#253449 100%);
 }
 
 .footer-content{
@@ -321,6 +321,7 @@ footer{
 }
 
 .copyright{
+    color: rgb(156, 151, 143);
     text-align: center;
 }
 
@@ -341,8 +342,8 @@ footer{
 }
 
 .contact-form input, .contact-form button, .contact-form textarea {
-    color : #D8D6D0;
-    background-color:#181A1B ;
+    color : #1A2433;
+    background-color: #FFFFFF ;
     border-radius: 3px;
     border: 1px solid #3D3D3D;
     padding: 10px;
