--- a/themes/npq-hugo/layouts/_default/baseof.html
+++ b/themes/npq-hugo/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
         {{- partial "aside.html" . -}}
         <main id="main">
             <a href="javascript:void(0)" id="closebtn" onclick="navToggle()"><i class="fas fa-bars fa-lg"></i></a>
-            <div class="content">
+            <div class="content main-bg-image">
                 {{- block "main" . }}{{- end }}
             </div>
         {{- partial "footer.html" . -}}
