--- a/themes/npq-hugo/static/css/style.css
+++ b/themes/npq-hugo/static/css/style.css
@@ -216,8 +216,8 @@ h1, h2, h3 {
 
 .column {
   float: left;
-  width: 30%;
-  margin: 1%;
+  width: 32.5%;
+  margin: 0.3%
 }
 
 /* Clear floats after the columns */
