--- a/themes/npq-hugo/static/css/style.css
+++ b/themes/npq-hugo/static/css/style.css
@@ -214,14 +214,20 @@ h1, h2, h3 {
     border-bottom: 1px solid #3D3D3D;
 }
 
-.column {
+.column-main {
+  float: left;
+  width: 50%;
+  vertical-align: middle;
+}
+
+.column-services {
   float: left;
   width: 32.5%;
-  margin: 0.3%
+  margin: 0.3%;
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row-services:after {
   content: "";
   display: table;
   clear: both;
@@ -359,7 +365,7 @@ footer{
     align-items: center;
 }
 
-.copyright{
+.copyright {
     color: #b0bbbf;
     text-align: center;
 }
