align links left

--- a/themes/npq-hugo/static/css/style.css
+++ b/themes/npq-hugo/static/css/style.css
@@ -99,8 +99,9 @@ aside nav a {
     overflow-x: hidden;
     overflow-y: auto;
     white-space: nowrap;
-    text-align: center;
+    text-align: left;
     transition: 0.2s;
+    margin-left: 50px;
 }
 
 aside nav a:hover {
