--- a/themes/npq-hugo/static/css/style.css
+++ b/themes/npq-hugo/static/css/style.css
@@ -84,7 +84,7 @@ aside a:hover {
 
 aside nav {
     list-style: none;
-    width: 100%;
+    width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
