Add blog images; Add date/author/tags to blog page

--- a/themes/npq-hugo/layouts/_default/list.html
+++ b/themes/npq-hugo/layouts/_default/list.html
@@ -10,7 +10,7 @@
                 {{end}}
                 <div class="meta">
                 {{with .Date}}
-                    <i class="far fa-calendar-alt"></i> {{.Format "Jan 2 2006"}}
+                    <i class="far fa-calendar-alt"></i> {{.Format "Monday, January 2 2006"}}
                 {{end}}
                 <br>
                 {{with .Params.tags}}
